--- a/simplevideocall-tutorial.html
+++ b/simplevideocall-tutorial.html
@@ -51,8 +51,8 @@
     
     const config = {
       credential: {
-        serviceId: '발급 받은 Service Id를 입력',
-        key: '발급 받은 Service Key를 입력'
+        serviceId: 'f2ed32b2-dc56-4c53-ad52-18e6fd7af6c1',
+        key: '996664d93eab7c562f66580f49b010ad5b23b29ae03aa0f486a30d99bec9e48f'
       },
       view: {
         remote: '#remoteVideo',
